--- a/VitalzApp/app/src/main/res/layout/fragment_hospital_list.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_hospital_list.xml
@@ -40,36 +40,57 @@
         android:id="@+id/layout_hospital_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_border"
         android:layout_margin="@dimen/dp_20"
-        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
+        android:background="@drawable/bg_curve"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">
 
-        <androidx.appcompat.widget.SearchView
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/search_hospitals"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="@dimen/dp_16"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent">
+
+            <EditText
+                android:id="@+id/et_search"
+                style="@style/search_et_box"
+                android:hint="@string/search_hospital"
+                app:layout_constraintEnd_toStartOf="@+id/iv_cancel_search"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/iv_cancel_search"
+                style="@style/viewSize"
+                android:src="@drawable/ic_baseline_cancel_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <View
             android:id="@+id/view_search_bar"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/button_grey"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/search_hospitals"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/search_hospitals" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView_hospital_list"
+            android:id="@+id/rv_hospital_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toBottomOf="@+id/view_search_bar"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/dp_16"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@+id/view_search_bar" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
