--- a/VitalzApp/app/src/main/res/layout/fragment_patient_profile.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_patient_profile.xml
@@ -32,7 +32,7 @@
                 android:contentDescription="@string/back_btn"
                 android:src="@drawable/ic_vital_name"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/iv_back_btn"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -257,13 +257,27 @@
                 app:layout_constraintStart_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_attending_doctor" />
 
+            <TextView
+                android:id="@+id/tv_id_hospital"
+                style="@style/heading_dashboard"
+                android:text="Hospital Id"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/et_attending_doctor" />
+
+            <EditText
+                android:id="@+id/et_id_hospital"
+                style="@style/et_dashboard"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_id_hospital" />
+
             <Button
                 android:layout_width="match_parent"
                 style="@style/button"
                 android:text="@string/submit"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/et_attending_doctor"/>
+                app:layout_constraintTop_toBottomOf="@+id/et_id_hospital" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
