--- a/VitalzApp/app/src/main/res/layout/fragment_caretaker_login.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_caretaker_login.xml
@@ -47,4 +47,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/response_msg" />
 
+    <TextView
+        android:id="@+id/tv_timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_8"
+        android:text="Resend Otp in 30 Seconds"
+        app:layout_constraintEnd_toEndOf="@+id/btn_request_otp"
+        app:layout_constraintStart_toStartOf="@+id/btn_request_otp"
+        app:layout_constraintTop_toBottomOf="@+id/btn_request_otp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
