--- a/VitalzApp/app/src/main/res/navigation/main_graph.xml
+++ b/VitalzApp/app/src/main/res/navigation/main_graph.xml
@@ -59,6 +59,9 @@
         <action
             android:id="@+id/action_doctorDashboardFragment_to_doctorPatientDetailFragment"
             app:destination="@id/doctorPatientDetailFragment" />
+        <action
+            android:id="@+id/action_doctorDashboardFragment_to_notificationsFragment"
+            app:destination="@id/notificationsFragment" />
     </fragment>
     <fragment
         android:id="@+id/nurseCareTakerPatientDetailFragment"
@@ -104,6 +107,9 @@
         <action
             android:id="@+id/action_nurseCareTakerDashboardFragment_to_nurseCareTakerPatientDetailFragment"
             app:destination="@id/nurseCareTakerPatientDetailFragment" />
+        <action
+            android:id="@+id/action_nurseCareTakerDashboardFragment_to_notificationsFragment"
+            app:destination="@id/notificationsFragment" />
     </fragment>
     <fragment
         android:id="@+id/patientProfileFragment"
