--- a/VitalzApp/app/src/main/res/layout/recycler_view_hospital_list.xml
+++ b/VitalzApp/app/src/main/res/layout/recycler_view_hospital_list.xml
@@ -7,8 +7,7 @@
 
     <TextView
         android:id="@+id/tv_hospital_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/viewSize"
         android:text="@string/sample_hospital"
         android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -18,8 +17,7 @@
 
     <TextView
         android:id="@+id/tv_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/viewSize"
         android:text="@string/id"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/black"
@@ -28,8 +26,7 @@
 
     <TextView
         android:id="@+id/tv_hospital_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/viewSize"
         android:text="@string/fake_id"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/black"
@@ -38,8 +35,7 @@
 
     <ImageView
         android:id="@+id/iv_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/viewSize"
         android:src="@drawable/ic_baseline_location_on_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_id"
@@ -47,8 +43,7 @@
 
     <TextView
         android:id="@+id/tv_hospital_address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/viewSize"
         android:text="@string/sample_address"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/black"
