--- a/VitalzApp/app/src/main/res/layout/recycler_view_notifications_list.xml
+++ b/VitalzApp/app/src/main/res/layout/recycler_view_notifications_list.xml
@@ -16,8 +16,7 @@
 
     <TextView
         android:id="@+id/tv_notification_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/viewSize"
         android:layout_marginStart="@dimen/dp_8"
         android:text="@string/sample_notification_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
@@ -29,8 +28,7 @@
 
     <TextView
         android:id="@+id/tv_notification_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/viewSize"
         android:layout_marginStart="@dimen/dp_8"
         android:text="@string/sample_date"
         android:textColor="@color/black"
