Hospital/Patient model & Adapter Modified

--- a/VitalzApp/app/src/main/res/layout/fragment_patient_list.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_patient_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/vitalz">
@@ -87,9 +88,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/dp_16"
-            app:layout_constraintTop_toBottomOf="@+id/view_search_bar_patient"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/search_patient"
+            tools:listitem="@layout/recycler_view_patient_list" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
