--- a/VitalzApp/app/src/main/res/layout/fragment_hospital_list.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_hospital_list.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/vitalz">
@@ -89,8 +90,10 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/dp_16"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view_search_bar" />
+            app:layout_constraintTop_toBottomOf="@+id/search_hospitals"
+            tools:listitem="@layout/recycler_view_hospital_list" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
