--- a/VitalzApp/app/src/main/res/layout/fragment_notifications.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_notifications.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@mipmap/vitalz">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -48,8 +49,9 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_notification_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:padding="@dimen/dp_16"
+            tools:listitem="@layout/recycler_view_notifications_list"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
