--- a/VitalzApp/app/src/main/res/layout/fragment_otp_confirm.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_otp_confirm.xml
@@ -130,4 +130,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_otp6" />
 
+    <TextView
+        android:id="@+id/tv_timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Resend Otp in 30 Seconds"
+        android:layout_marginTop="@dimen/dp_8"
+        app:layout_constraintEnd_toEndOf="@+id/btn_confirm_otp"
+        app:layout_constraintTop_toBottomOf="@+id/btn_confirm_otp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
