--- a/VitalzApp/app/src/main/res/layout/fragment_patient_list.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_patient_list.xml
@@ -87,13 +87,36 @@
             android:id="@+id/rv_patient_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="visible"
             android:padding="@dimen/dp_16"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/search_patient"
-            tools:listitem="@layout/recycler_view_patient_list" />
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/tv_no_records"
+        style="@style/viewSize"
+        android:visibility="gone"
+        android:text="Sorry! No Record Found"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/button_Red"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_no_record_back_msg"
+        style="@style/viewSize"
+        android:visibility="gone"
+        android:layout_marginTop="@dimen/dp_8"
+        android:text="Please go back to Hospital List"
+        app:layout_constraintEnd_toEndOf="@+id/tv_no_records"
+        app:layout_constraintStart_toStartOf="@+id/tv_no_records"
+        app:layout_constraintTop_toBottomOf="@+id/tv_no_records" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
