--- a/VitalzApp/app/src/main/res/layout/fragment_patient_list.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_patient_list.xml
@@ -101,7 +101,7 @@
         android:id="@+id/tv_no_records"
         style="@style/viewSize"
         android:visibility="gone"
-        android:text="Sorry! No Record Found"
+        android:text="Sorry! No Records Found"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@color/button_Red"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -114,7 +114,7 @@
         style="@style/viewSize"
         android:visibility="gone"
         android:layout_marginTop="@dimen/dp_8"
-        android:text="Please go back to Hospital List"
+        android:text="Please select different Hospital"
         app:layout_constraintEnd_toEndOf="@+id/tv_no_records"
         app:layout_constraintStart_toStartOf="@+id/tv_no_records"
         app:layout_constraintTop_toBottomOf="@+id/tv_no_records" />
