--- a/VitalzApp/app/src/main/res/layout/recycler_view_patient_list.xml
+++ b/VitalzApp/app/src/main/res/layout/recycler_view_patient_list.xml
@@ -23,8 +23,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp_8"
         android:text="@string/sample_patient_age"
+        android:textColor="@color/button_blue"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/black"
         app:layout_constraintStart_toEndOf="@+id/tv_patient_name"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,7 +35,7 @@
         android:layout_marginStart="@dimen/dp_8"
         android:text="@string/sample_age"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/black"
+        android:textColor="@color/button_blue"
         app:layout_constraintStart_toEndOf="@+id/tv_patient_age"
         app:layout_constraintTop_toTopOf="parent" />
 
