Chnages after PR

--- a/VitalzApp/app/src/main/res/navigation/main_graph.xml
+++ b/VitalzApp/app/src/main/res/navigation/main_graph.xml
@@ -62,6 +62,9 @@
         <action
             android:id="@+id/action_doctorDashboardFragment_to_notificationsFragment"
             app:destination="@id/notificationsFragment" />
+        <action
+            android:id="@+id/action_doctorDashboardFragment_to_userSelectionFragment2"
+            app:destination="@id/userSelectionFragment2" />
     </fragment>
     <fragment
         android:id="@+id/nurseCareTakerPatientDetailFragment"
@@ -110,6 +113,9 @@
         <action
             android:id="@+id/action_nurseCareTakerDashboardFragment_to_notificationsFragment"
             app:destination="@id/notificationsFragment" />
+        <action
+            android:id="@+id/action_nurseCareTakerDashboardFragment_to_userSelectionFragment2"
+            app:destination="@id/userSelectionFragment2" />
     </fragment>
     <fragment
         android:id="@+id/patientProfileFragment"
