--- a/VitalzApp/app/src/main/res/layout/multiple_patient_dashboard.xml
+++ b/VitalzApp/app/src/main/res/layout/multiple_patient_dashboard.xml
@@ -29,62 +29,68 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_patient_list"
+        android:id="@+id/search_patient"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_curve"
-        android:layout_margin="@dimen/dp_20"
-        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
+        android:padding="@dimen/dp_16"
+        android:layout_margin="@dimen/dp_12"
+        android:background="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/app_bar_layout">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/search_patient"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/dp_16"
+        <EditText
+            android:id="@+id/et_search_patient"
+            style="@style/search_et_box"
+            android:hint="@string/search_patient"
+            android:inputType="text"
+            app:layout_constraintEnd_toStartOf="@+id/iv_cancel_search_patient"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/iv_cancel_search_patient"
+            style="@style/viewSize"
+            android:src="@drawable/ic_baseline_cancel_24"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <EditText
-                android:id="@+id/et_search_patient"
-                style="@style/search_et_box"
-                android:hint="@string/search_patient"
-                app:layout_constraintEnd_toStartOf="@+id/iv_cancel_search_patient"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/iv_cancel_search_patient"
-                style="@style/viewSize"
-                android:src="@drawable/ic_baseline_cancel_24"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <View
-            android:id="@+id/view_search_bar_patient"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/button_grey"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/search_patient" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_patient_dashboard_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/dp_16"
-            tools:listitem="@layout/recycler_view_doc_patient_list"
-            app:layout_constraintTop_toBottomOf="@+id/view_search_bar_patient"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <View
+        android:id="@+id/view_search_bar_patient"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginStart="@dimen/dp_12"
+        android:layout_marginEnd="@dimen/dp_12"
+        android:background="@color/button_grey"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/search_patient" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_multiple_patient_dashboard_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        android:layout_margin="@dimen/dp_8"
+        tools:listitem="@layout/recycler_view_doc_patient_list"
+        app:layout_constraintTop_toBottomOf="@+id/view_search_bar_patient"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_no_records"
+        style="@style/viewSize"
+        android:visibility="gone"
+        android:text="@string/no_records_found"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/button_Red"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
