--- a/VitalzApp/app/src/main/res/values/dimens.xml
+++ b/VitalzApp/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="dp_16">16dp</dimen>
     <dimen name="dp_24">24dp</dimen>
     <dimen name="dp_32">32dp</dimen>
+    <dimen name="dp_30">30dp</dimen>
     <dimen name="dp_40">40dp</dimen>
     <dimen name="dp_50">50dp</dimen>
     <dimen name="dp_60">60dp</dimen>
