--- a/VitalzApp/app/src/main/res/layout/fragment_add_device.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_add_device.xml
@@ -42,7 +42,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView_add_device" />
 
     <Button
-        android:id="@+id/btn_confirm_otp"
+        android:id="@+id/add_device_btn"
         style="@style/button"
         android:text="@string/add_device"
         app:layout_constraintEnd_toEndOf="parent"
