Changes as per Api responses

--- a/VitalzApp/app/src/main/res/layout/caretaker_nurse_dashboard.xml
+++ b/VitalzApp/app/src/main/res/layout/caretaker_nurse_dashboard.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/vitalz">
@@ -69,7 +71,7 @@
 
     <TextView
         android:id="@+id/tv_selected_patient"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp_16"
         android:layout_marginTop="@dimen/dp_16"
@@ -77,8 +79,18 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@id/layout_dashboard"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layout_ble" />
+
+
+    <ImageView
+        android:id="@+id/iv_view_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/dp_16"
+        android:src="@drawable/ic_edit_profile"
+        app:layout_constraintBottom_toTopOf="@+id/layout_dashboard"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layout_ble" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
