--- a/VitalzApp/app/src/main/res/layout/fragment_patient_list.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_patient_list.xml
@@ -89,6 +89,7 @@
             android:layout_height="wrap_content"
             android:visibility="visible"
             android:padding="@dimen/dp_16"
+            tools:listitem="@layout/recycler_view_patient_list"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
