--- a/VitalzApp/app/src/main/res/values/dimens.xml
+++ b/VitalzApp/app/src/main/res/values/dimens.xml
@@ -3,7 +3,6 @@
     <dimen name="dp_5">5dp</dimen>
     <dimen name="dp_8">8dp</dimen>
     <dimen name="dp_12">12dp</dimen>
-    <dimen name="sp_18">18dp</dimen>
     <dimen name="dp_20">20dp</dimen>
     <dimen name="dp_16">16dp</dimen>
     <dimen name="dp_24">24dp</dimen>
@@ -18,5 +17,14 @@
     <dimen name="dp_100">100dp</dimen>
     <dimen name="dp_80">80dp</dimen>
     <dimen name="dp_300">300dp</dimen>
+
+
+    <!--Text-->
+
+    <dimen name="sp_8">8sp</dimen>
+    <dimen name="sp_10">10sp</dimen>
+    <dimen name="sp_12">12sp</dimen>
     <dimen name="sp_16">16sp</dimen>
+    <dimen name="sp_18">18sp</dimen>
+    <dimen name="sp_32">32sp</dimen>
 </resources>
