--- a/VitalzApp/app/src/main/res/navigation/main_graph.xml
+++ b/VitalzApp/app/src/main/res/navigation/main_graph.xml
@@ -73,11 +73,7 @@
     <fragment
         android:id="@+id/nurseCareTakerPatientDetailFragment"
         android:name="com.technoidentity.vitalz.dashboard.NurseCareTakerPatientDetailFragment"
-        android:label="NurseCareTakerPatientDetailFragment" >
-        <action
-            android:id="@+id/action_nurseCareTakerPatientDetailFragment_to_patientProfileFragment"
-            app:destination="@id/patientProfileFragment" />
-    </fragment>
+        android:label="NurseCareTakerPatientDetailFragment" />
     <fragment
         android:id="@+id/addDeviceFragment"
         android:name="com.technoidentity.vitalz.bluetooth.AddDeviceFragment"
@@ -124,6 +120,9 @@
         <action
             android:id="@+id/action_nurseCareTakerDashboardFragment_to_userSelectionFragment2"
             app:destination="@id/userSelectionFragment2" />
+        <action
+            android:id="@+id/action_nurseCareTakerDashboardFragment_to_patientProfileFragment"
+            app:destination="@id/patientProfileFragment" />
     </fragment>
     <fragment
         android:id="@+id/patientProfileFragment"
