--- a/VitalzApp/app/src/main/res/layout/fragment_patient_list.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_patient_list.xml
@@ -67,6 +67,7 @@
             <ImageView
                 android:id="@+id/iv_cancel_search"
                 style="@style/viewSize"
+                android:visibility="gone"
                 android:src="@drawable/ic_baseline_cancel_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
