--- a/VitalzApp/app/src/main/res/layout/recycler_view_hospital_list.xml
+++ b/VitalzApp/app/src/main/res/layout/recycler_view_hospital_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/dp_8"
@@ -10,9 +11,9 @@
         android:id="@+id/tv_hospital_name"
         style="@style/viewSize"
         android:text="@string/sample_hospital"
-        android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/button_blue"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -20,10 +21,11 @@
         android:id="@+id/tv_id"
         style="@style/viewSize"
         android:text="@string/id"
+        android:layout_marginTop="@dimen/dp_5"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tv_hospital_id"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_hospital_name" />
 
     <TextView
@@ -33,12 +35,14 @@
         android:text="@string/fake_id"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_id"
         app:layout_constraintStart_toEndOf="@id/tv_id"
-        app:layout_constraintTop_toBottomOf="@id/tv_hospital_name" />
+        app:layout_constraintTop_toTopOf="@+id/tv_id" />
 
     <ImageView
         android:id="@+id/iv_location"
         style="@style/viewSize"
+        android:layout_marginTop="@dimen/dp_5"
         android:src="@drawable/ic_baseline_location_on_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_id"
@@ -47,11 +51,13 @@
     <TextView
         android:id="@+id/tv_hospital_address"
         style="@style/viewSize"
+        android:layout_marginStart="@dimen/dp_5"
         android:text="@string/sample_address"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_location"
         app:layout_constraintStart_toEndOf="@id/iv_location"
-        app:layout_constraintTop_toBottomOf="@id/tv_hospital_id" />
+        app:layout_constraintTop_toTopOf="@+id/iv_location" />
 
     <View
         android:layout_width="match_parent"
